# svcli

./: .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake
res/: config.h.in
svcli/: CMakeLists.txt
svcli/src/: main.cpp
